[package]
name = "benchy"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
benchmark = ["lazy_static"]

[dependencies]
lazy_static = {version="1.4", optional=true}
